--- a/style.css
+++ b/style.css
@@ -142,6 +142,12 @@ h4 {
   height: 500px;
 }
 
+.carousel-item img {
+  width: 100%; 
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover; /* Crops image if needed */
+}
+
 /* Gallary */
 
 .pizza-gallary {
@@ -264,6 +270,9 @@ h4 {
   .pizza-gallary {
     grid-template-rows: repeat(6, 20px);
     gap: 2px;
+  }
+  .carousel-indicators {
+    display: none;
   }
 
   iframe {
